--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.10.1"
+  },
+  "engines": {
+    "node": "12.14.1",
+    "yarn": "1.21.1"
   }
 }
