after webpakcer:install:react

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,9 @@ node_modules/
 yarn-debug.log*
 .yarn-integrity
 .yarn/
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
